--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,22 @@
 # ----
 # Site
 
-title: Base
+title: robotica-gac
 url: "https://robotica-gac.github.io/"
 baseurl:
-google_analytics_key:
-disqus_shortname:
 newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Knowledge base template for Jekyll.
-author:
+description: Curso de robótica.
+author: Francisco Ciampo
   name:
   email:
-  twitter: # twitter username without the @ symbol
-social:
-  name: Base Template
-  links:
-    - https://github.com/CloudCannon/base-jekyll-template
 
 # -----
 # Build
 
-timezone: Etc/UTC
+timezone: Etc/UTC-3
 
 permalink: /:categories/:title/
 
@@ -42,7 +35,6 @@ exclude:
 
 collections:
   sets:
-
 
 jekyll-archives:
   enabled: ['categories']
